appId: dev.noboil.mobile.convex.blog
---
- launchApp
- assertVisible:
    id: "crud-dynamic-page"
- tapOn:
    id: "profile-link"
- assertVisible:
    id: "profile-page"
