appId: dev.noboil.mobile.stdb.blog
---
- launchApp
- assertVisible:
    id: "crud-dynamic-page"
- tapOn:
    id: "pagination-link"
- assertVisible:
    id: "crud-pagination-page"
